--- a/Styles/estilos.css
+++ b/Styles/estilos.css
@@ -120,6 +120,10 @@ font-size:18px;
     background-color: transparent;
     border:none;
 }
+a:hover{
+cursor: pointer;
+color:#7ed957;
+}
 .rowBoton:hover{
     color:#7ed957;
     
@@ -162,6 +166,7 @@ boton:hover {
     left: 0;
     width: 100%;
     height: 100%;
+    overflow: auto;
     display: none;
 }
 
