--- a/Styles/estilos.css
+++ b/Styles/estilos.css
@@ -1,4 +1,13 @@
-﻿.inicio{
+﻿*{
+    font-family: system-ui!important;
+}
+div,label,span,p{
+    font-size: 18px;
+}
+a:hover,button:hover{
+    cursor:pointer
+}
+.inicio{
     width:100%;
     height:auto;
     border-color:aqua;
@@ -183,6 +192,7 @@ boton:hover {
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 10;
     height: 100%;
     overflow: auto;
     display: none;
