--- a/Styles/estilos.css
+++ b/Styles/estilos.css
@@ -127,7 +127,7 @@ font-size:18px;
 }
 .tituloMovimiento {
     text-align: center;
-    font-size: xx-large;
+    font-size: xxx-large;
     font-weight: bold;
     margin-top: 2em;
     font-family: system-ui;
@@ -192,7 +192,7 @@ boton:hover {
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 10;
+    z-index: 100;
     height: 100%;
     overflow: auto;
     display: none;
